infrastructure/kubernetes/logging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging
  labels:
    name: logging
    app.kubernetes.io/name: logging
    app.kubernetes.io/part-of: askyia
