infrastructure/kubernetes/logging/logstash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: workflow-builder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:8.11.1
          ports:
            - containerPort: 5044
---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: workflow-builder
spec:
  selector:
    app: logstash
  ports:
    - port: 5044
      targetPort: 5044
